# Qlibworks

./: .env.example  .gitignore  _claude_test.json  _claude_v2.json  _claude_v3.json  _crash_err.txt  _cv4.json  _cv5.json  _cv6.json  _cv_final.json  _fix_log.txt  _ps_out.txt  _run_ps.ps1  _score_check_result.json  _tmp_verify.json  _train_run_stderr.txt  _train_run_stdout.txt  _train_stderr.txt  _train_stdout.txt  _verify_result.json  check_data_quality.py  data_fill.py  data_refresh.py  debug_output.json  debug_pandas_test.py  debug_random_benchmark.py  debug_random_benchmark_v2.py  debug_report.py  debug_top_predictions_check.csv  demo_bt_adapter.py  demo_duckdb_adapter.py  demo_factor_library.py  demo_neutralize.py  extracted_gtja191.json  fix_imports.txt  generate_gtja191.py  industry_mapping.json  migrate_factors.py  overrides.json  package-lock.json  (+14 more)
bt_output/: qlib_bt_superplot.json
demos/: demo_bt_adapter.py  demo_duckdb_adapter.py  demo_factor_library.py  demo_neutralize.py
docs/: AI_量化架构与设计笔记.md  code_audit_report.md  多因子量化研究：有效因子挖掘的完整方法与流程.md  最终版：ClickHouse+DuckDB+Parquet+Qlib 个人量化数据管理终极方案.md  机器学习多因子量化研究操作指引.md  沪深主板20因子标准化极慢的核心根源及全套提速方案.md
drafts/: factor_screening.py  factor_screening_linear.py  factor_screening_results.csv  factor_screening_results_with_meaning.csv  factor_screening_tree.py  ml_predictions_score.csv  model_training_and_backtest.py  model_training_and_backtest_rolling.py  qlib_bt_superplot.json  runbacktest.py  runbacktest_industry_neutral.py  test_screening.py  tree_model_selected_factors.csv
factor_data/: warehouse_status.json
(+453 files in other folders)
